<?xml version="1.0"?>
<package>
  <name>break_beam</name>
  <version>1.0.0</version>
  <description>
    This package publishes Arduino break beam data
  </description>
  <maintainer email="ude.hcimu@tsofp.delete.from.tsofp.and.reverse.previous.com">Zhen Zeng</maintainer>
  <license>proprietary</license>

  <url></url>
  <author>Zhen Zeng</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>baxter_core_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>baxter_core_msgs</run_depend>

</package>
